new_tests/semantics/scope/bad/002_GD1.cm

def global a:Int = 5
def global a:Int = 8
